--- a/task-4/index-1-4.html
+++ b/task-4/index-1-4.html
@@ -12,5 +12,6 @@
         <span id="value">0</span>
         <button type="button" data-action="increment">+1</button>
       </div>
+      <script src="./hw-1-4.js"></script>
 </body>
 </html>
