--- a/task-7/index-1-7.html
+++ b/task-7/index-1-7.html
@@ -5,18 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Завдання 7</title>
     <link rel="stylesheet" href="./styles-1-6.css">
 </head>
 
 <body>
-    <input
-    type="text"
-    id="validation-input"
-    data-length="6"
-    placeholder="Please enter 6 symbols"
-  />
-    <script src="./hw-1-6.js"></script>
+  <input id="font-size-control" type="range" min="16" max="96" />
+  <br />
+  <span id="text">Abracadabra!</span>
+    <script src="./hw-1-7.js"></script>
 </body>
 
 </html>
