--- a/index.html
+++ b/index.html
@@ -9,38 +9,38 @@
 <body>
     <ul>
         <li>
-            <a href="./task-1/index-1-1.html">
+            <a href="./task-1/index.html">
                 task 1
             </a>
         </li>
         <li>
-            <a href="./task-1/index-1-2.html">
+            <a href="./task-1/index.html">
                 task 2
             </a>
         </li>
         <li>
-            <a href="./task-1/index-1-3.html">task 3</a>
+            <a href="./task-1/index.html">task 3</a>
         </li>
         <li>
-            <a href="./task-1/index-1-4.html">task 4</a>
+            <a href="./task-1/index.html">task 4</a>
         </li>
         <li>
-            <a href="./task-1/index-1-5.html">task 5</a>
+            <a href="./task-1/index.html">task 5</a>
         </li>
         <li>
-            <a href="./task-1/index-1-6.html">task 6</a>
+            <a href="./task-1/index.html">task 6</a>
         </li>
         <li>
-            <a href="./task-1/index-1-7.html">task 7</a>
+            <a href="./task-1/index.html">task 7</a>
         </li>
         <li>
-            <a href="./task-1/index-1-8.html">task 8</a>
+            <a href="./task-1/index.html">task 8</a>
         </li>
         <li>
-            <a href="./task-1/index-1-9.html">task 9</a>
+            <a href="./task-1/index.html">task 9</a>
         </li>
         <li>
-            <a href="./task-1/index-1-10.html">task 10</a>
+            <a href="./task-1/index.html">task 10</a>
         </li>
     </ul>
 </body>
